--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-
+html {
+  background-color: #27A6F4;
+}
 .App {
   text-align: center;
 }
@@ -15,7 +17,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #27A6F4;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -36,4 +38,53 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.menu {
+  display: flex;
+  margin:10px;
+  height: 124px;
+  border-radius: 25px;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #346DFF;
+}
+
+.menu li {
+  display: flex;
+  list-style-type: none;
+}
+
+.menu a {
+  text-decoration: none;
+  font-size: xx-large;
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+}
+
+.profilEtud {
+  display: flex;
+  flex-direction: column;
+}
+
+.profilEtud h2 {
+  padding: 7px;
+  background-color: #346DFF;
+  margin-left: 88.5%;
+  width: 160px;
+  border-radius: 25px;
+}
+
+.calendrier {
+  display: flex;
+  flex-direction: column;
+}
+
+.calendrier h2 {
+  padding: 7px;
+  background-color: #346DFF;
+  margin-left: 3%;
+  margin-top: 2%;
+  width: 160px;
+  border-radius: 25px;
 }
