--- a/src/App.css
+++ b/src/App.css
@@ -1,90 +1,105 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;500&display=swap');
 html {
-  background-color: #27A6F4;
+    background-color: #27A6F4;
 }
+
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #27A6F4;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #27A6F4;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 .menu {
-  display: flex;
-  margin:10px;
-  height: 124px;
-  border-radius: 25px;
-  justify-content: space-around;
-  align-items: center;
-  background-color: #346DFF;
+    display: flex;
+    margin: 10px;
+    height: 124px;
+    border-radius: 25px;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #346DFF;
 }
 
 .menu li {
-  display: flex;
-  list-style-type: none;
+    display: flex;
+    list-style-type: none;
 }
 
 .menu a {
-  text-decoration: none;
-  font-size: xx-large;
-  font-family: Arial, Helvetica, sans-serif;
-  color: black;
+    text-decoration: none;
+    font-size: xx-large;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
 }
 
 .profilEtud {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .profilEtud h2 {
-  padding: 7px;
-  background-color: #346DFF;
-  margin-left: 88.5%;
-  width: 160px;
-  border-radius: 25px;
+    padding: 7px;
+    background-color: #346DFF;
+    margin-left: 88.5%;
+    width: 160px;
+    border-radius: 25px;
 }
 
 .calendrier {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .calendrier h2 {
-  padding: 7px;
-  background-color: #346DFF;
-  margin-left: 3%;
-  margin-top: 2%;
-  width: 160px;
-  border-radius: 25px;
+    padding: 7px;
+    background-color: #346DFF;
+    margin-left: 3%;
+    margin-top: 2%;
+    width: 160px;
+    border-radius: 25px;
+}
+
+table {
+    background-color: #C4C4C4;
+    border: 2px solid #000000;
+    border-radius: 18px;
+    margin: auto;
+    width: 1275px;
+    height: 276px;
+    font-family: 'Questrial', sans-serif;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 30.9px;
 }
