--- a/src/component/style/etudiant.css
+++ b/src/component/style/etudiant.css
@@ -1,14 +1,37 @@
 .profil {
     display: flex;
-    justify-content: center;
+    align-items: center;
+    margin-bottom: 10rem;
+}
+
+.card {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
     border: solid 4px;
     flex-direction: column;
-    width: 13%;
-    margin-left: 85%;
+    width: 20rem;
+    margin-left: 3rem;
     background-color: white;
-    font-size: small;
+    font-size: 0.8rem;
+    margin-right: 1rem;
 }
 .card img {
+    border: solid 2px black;
+    border-radius: 50%;
+    margin: 1rem;
     width: 200px;
+}
+
+h1 {
+    font-size: 1.5rem;
+}
+
+.profilEtud h2 {
+    margin-top: 4rem;
+    padding: 0.5rem;
+    background-color: #346DFF;
+    margin-left: 8rem;
+    width: 160px;
+    border-radius: 25px;
 }
