--- a/src/component/style/etudiant.css
+++ b/src/component/style/etudiant.css
@@ -6,7 +6,6 @@
 
 .card {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     border: solid 4px;
     flex-direction: column;
@@ -17,12 +16,12 @@
     margin-right: 1rem;
 }
 .card img {
-    border: solid 2px black;
+    border: solid 5px black;
     border-radius: 50%;
     margin: 1rem;
-    width: 200px;
+    width: 10rem;
 }
 
 h1 {
-    font-size: 1.5rem;
+    font-size: 1.1rem;
 }
