--- a/src/component/style/calendrier.css
+++ b/src/component/style/calendrier.css
@@ -24,7 +24,7 @@
     padding: 7px;
     background-color: #346DFF;
     margin-left: 3%;
-    margin-top: 2%;
-    width: 160px;
+    margin-top: 4rem;
+    width: 11rem;
     border-radius: 25px;
 }
