--- a/src/component/style/etudiant.css
+++ b/src/component/style/etudiant.css
@@ -14,6 +14,7 @@
     background-color: white;
     font-size: 0.8rem;
     margin-right: 1rem;
+    padding: 1rem;
 }
 .card img {
     border: solid 5px black;
