--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,12 @@ div h2 {
 }
 
 .h2Btn {
-    margin-left: 3%;
+    margin-left: 30%;
+    margin-top: 4rem;
+    padding: 0.5rem;
+    background-color: #346DFF;
+    width: 11rem;
+    border-radius: 25px;
 }
 
 .ligneBtnSem {
