css des ressources etc

--- a/src/App.css
+++ b/src/App.css
@@ -15,23 +15,36 @@ div h2 {
     align-items: center;
 }
 
-.list {
-    border: solid 1px;
-    background-color: lightgrey;
-    border-radius: 10px;
+.list{
+    border: solid 1px ;
+    background-color: rgb(187, 182, 182);
+    border-radius: 25px;
+    margin: 3rem;
 }
 
 .item {
     display: flex;
     flex-direction: row;
     margin: 5px;
+    font-size: x-large;
+    font-weight: 600;
+    font-family: 'Questrial', sans-serif;
+}
+
+.noteItem {
+    display: flex;
+    flex-direction: row;
+    margin: 5px;
+    font-size: x-large;
+    font-weight: 600;
     font-family: 'Questrial', sans-serif;
 }
 
 .item p {
-    margin-left: 20rem;
+    margin-left: 3rem;
     margin-right: 20rem;
 }
+
 
 .information h2 {
     margin-left: 30%;
@@ -40,11 +53,6 @@ div h2 {
     background-color: #346DFF;
     width: 11rem;
     border-radius: 25px;
-}
-
-.ressource {
-    margin: 1rem;
-    background-color: black;
 }
 
 .h2Btn {
